[0.0.1] Redesign App Logo
Redesign App logo See: https://adapticon.tooo.io/#/bg=https://i.imgur.com/iqGpQCh.png/fg=https://i.imgur.com/jceH9gr.png

Signed-off-by: chengjie <chengjie.jlu@qq.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.jlu.chengjie.zhihu">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".ZApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
