--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,11 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
 
+    //noinspection GradleDependency
     implementation 'com.jakewharton:butterknife:9.0.0'
+    //noinspection GradleDependency
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'jp.wasabeef:glide-transformations:4.0.0'
 }
