--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,14 +22,15 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
-
     //noinspection GradleDependency
     implementation 'com.jakewharton:butterknife:9.0.0'
     //noinspection GradleDependency
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation files('libs/markdown4j-2.2-cj-1.1.jar')
 }
