--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    packagingOptions {
+        exclude 'META-INF/LICENSE-LGPL-2.1.txt'
+        exclude 'META-INF/LICENSE-LGPL-3.txt'
+        exclude 'META-INF/LICENSE-W3C-TEST'
+        exclude 'META-INF/DEPENDENCIES'
+    }
 }
 
 dependencies {
@@ -29,8 +35,10 @@ dependencies {
     implementation 'com.jakewharton:butterknife:9.0.0'
     //noinspection GradleDependency
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    //noinspection GradleDependency
     annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
-    implementation files('libs/markdown4j-2.2-cj-1.1.jar')
+    implementation 'com.vladsch.flexmark:flexmark-all:0.40.20'
+    implementation 'ren.qinc.edit:lib:0.0.5'
 }
